Fixes #13: Add xdebug configuration to the party.

--- a/parrot-config/php/parrot-base.ini
+++ b/parrot-config/php/parrot-base.ini
@@ -40,3 +40,10 @@ apc.user_ttl=7200
 xdebug.remote_enable=1
 ; Stop potential inifinte loops, while allowing enough depth for Drupal
 xdebug.max_nesting_level=200
+xdebug.remote_handler=dbgp
+
+; Set the remote address to the default address of our host machine, magic.
+xdebug.remote_host=10.0.2.2
+xdebug.remote_port=9000
+
+xdebug.remote_log=/tmp/php5-xdebug.log
