Move around some of the subscribe attributes etc.

--- a/parrot-config/php/parrot-base.ini
+++ b/parrot-config/php/parrot-base.ini
@@ -14,6 +14,9 @@ error_reporting = E_ALL | E_STRICT
 ; Display errors on a dev box
 display_errors = On
 
+; Display the errors using lovely HTML.
+html_errors = On
+
 ; and show startup errors
 display_startup_errors = On
 
