--- a/parrot-config/php/parrot-base.ini
+++ b/parrot-config/php/parrot-base.ini
@@ -30,6 +30,15 @@ error_log = syslog
 ; http://php.net/post-max-size
 post_max_size = 8M
 
+; Determines the size of the realpath cache to be used by PHP. This value should
+; be increased on systems where PHP opens many files to reflect the quantity of
+; the file operations performed.
+realpath_cache_size=1M
+
+; Duration of time, in seconds for which to cache realpath information for a given
+; file or directory. For systems with rarely changing files, consider increasing this
+; value.
+realpath_cache_ttl=300
 
 [apc]
 ; Change the APC limit to something that isn't going to fragment too much.
@@ -48,3 +57,5 @@ xdebug.remote_handler=dbgp
 ; Set the remote address to the default address of our host machine, magic.
 xdebug.remote_host=10.0.2.2
 xdebug.remote_port=9000
+
+
