Fix XDebug link format PHPStorm Remote Call running on host

--- a/parrot-config/php/parrot-base.ini
+++ b/parrot-config/php/parrot-base.ini
@@ -58,5 +58,5 @@ xdebug.remote_handler=dbgp
 xdebug.remote_host=10.0.2.2
 xdebug.remote_port=9000
 ; Output links compatible with the PHPStorm Remote Call plugin running on the host. 
-xdebug.file_link_format="javascript:var rq = new XMLHttpRequest(); rq.open(\"GET\", \"http://10.0.2.2:8091?message=%f:%l\", true); rq.send(null);"
+xdebug.file_link_format="javascript:var rq = new XMLHttpRequest(); rq.open(\"GET\", \"http://localhost:8091?message=%f:%l\", true); rq.send(null);"
 
