Fixes #54, #48: set the host IP in a smarter way.

--- a/parrot-config/php/parrot-base.ini
+++ b/parrot-config/php/parrot-base.ini
@@ -55,8 +55,8 @@ xdebug.max_nesting_level=200
 xdebug.remote_handler=dbgp
 
 ; Set the remote address to the default address of our host machine, magic.
-xdebug.remote_host=10.0.2.2
+xdebug.remote_host=host_machine.parrot
 xdebug.remote_port=9000
-; Output links compatible with the PHPStorm Remote Call plugin running on the host. 
+; Output links compatible with the PHPStorm Remote Call plugin running on the host.
 xdebug.file_link_format="javascript:var rq = new XMLHttpRequest(); rq.open(\"GET\", \"http://localhost:8091?message=%f:%l\", true); rq.send(null);"
 
