Add mod_pagespeed Apache module to the stack.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 config.yml
 parrot-config/solr/*
 parrot-config/php/parrot-local.ini
+parrot-config/pagespeed/pagespeed.conf
 sites/*
 .DS_Store
 tmp/*
