Define inbox for namespace in Dovecot

--- a/modules/mailcollect/files/10-mail.conf
+++ b/modules/mailcollect/files/10-mail.conf
@@ -103,6 +103,12 @@ mail_location = maildir:~/Maildir
   #list = children
 #}
 
+namespace inbox {
+  # There can be only one INBOX, and this setting defines which namespace
+  # has it.
+  inbox = yes
+}
+
 # System user and group used to access mails. If you use multiple, userdb
 # can override these by returning uid or gid fields. You can use either numbers
 # or names. <doc/wiki/UserIds.txt>
