--- a/parrot-config/php/parrot-local.ini.template
+++ b/parrot-config/php/parrot-local.ini.template
@@ -1,5 +1,5 @@
 ; These options can override the ones that come from the parrot-base.ini file.
 ; 
-; Make a duplicate of this file called: parrot-local.ini and run parrot provision.
+; Make a duplicate of this file called: parrot-local.ini and run 'vagrant provision'.
 
 ; memory_limit = 1G
